# translator-game

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ENGINES.md  Home.md  QA-TEST-PLAN.md  ROADMAP.md  games.md  guides.md  translate-ac-origins.md
docs/games/: anvilnext-forger.md  anvilnext-locpackage-format.md  unity-csv-localization.md  unity-naninovel.md  unity-texttable.md
docs/guides/: app-manual.html  translate-ac-origins.md
prompts/: extra.txt
scripts/: freeze-unity-sidecar.ps1
scripts/unity-sdf-bake/: README.md  bake_all_fonts.py  bake_font_into_bundle.py  bake_font_into_stripped_tmp.py  sdf_lib.py
src/: App.tsx  codes.ts  errors.ts  glossarySuggest.ts  ipc.ts  langs.ts  messageWidth.ts  recents.ts  settings.ts  status.ts  store.ts  styles.css  theme.ts  translation.ts  update.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: harness.rs  probe.rs  probe_ai.rs  translate_one.rs
src-tauri/icons/: icon.icns
src-tauri/resources/unity/: rpgtl_unity.py
src-tauri/resources/unrpyc/: README.md
src-tauri/src/: keys.rs  lib.rs  model.rs
src-tauri/src/ai/: anthropic.rs  gemini.rs  mod.rs  openai.rs  prompt.rs  retry.rs
src-tauri/src/engine/: ac_loctext.rs  codes.rs  encoding.rs  forger_acod.rs  godot.rs  hendrix.rs  kirikiri.rs  mod.rs  mvmz.rs  protect.rs  renpy.rs  renpy_tl.rs  rpa.rs  tyrano.rs  unity.rs  unity_csv.rs  unity_textbl.rs  unrpyc.rs
src-tauri/src/project/: db.rs  mod.rs
src-tauri/tests/: ac_loctext_roundtrip.rs  ai_batch.rs  extract_roundtrip.rs  forger_acod_roundtrip.rs  godot_roundtrip.rs  hendrix_roundtrip.rs  kirikiri_roundtrip.rs  project_flow.rs  qa_fixes.rs  reexport_idempotent.rs  renpy_roundtrip.rs  restore_original.rs  tm_glossary.rs  tyrano_roundtrip.rs  unity_csv_roundtrip.rs  unity_roundtrip.rs  unity_textbl_roundtrip.rs
src-tauri/tests/fixtures/mz-sample/data/: Actors.json  CommonEvents.json  Items.json  Map001.json  MapInfos.json  System.json
src-tauri/tests/fixtures/renpy-sample/game/: script.rpy
src-tauri/tests/fixtures/renpy-sample/game/tl/french/: script.rpy
src-tauri/tests/fixtures/tyrano-sample/data/scenario/: first.ks
src/components/: Icon.tsx  MessagePreview.tsx  Modal.tsx  OverflowMenu.tsx  Sidebar.tsx  TransProgress.tsx  UnitRow.tsx  UpdateBanner.tsx
src/views/: ErrorsPanel.tsx  GlossaryView.tsx  GridView.tsx  ImportView.tsx  LintPanel.tsx  SettingsView.tsx  TranslateBar.tsx
