[package]
name = "rpgmaker-translator"
version = "0.8.2"
description = "Translate RPGMaker games (MV/MZ) by hand or via AI"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
# The Tauri v2 layout: a lib crate holding `run()` plus a thin bin.
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
tokio = { version = "1", features = ["time"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
encoding_rs = "0.8"
# Ren'Py translation identifiers are an MD5 of the say statements' code.
md5 = "0.7"
# Dev-only: `.env` loading for local API keys (guarded by debug_assertions).
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "time"] }
async-trait = "0.1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
encoding_rs = "0.8"

[features]
# Default off; enable to keep the console window on Windows release builds.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Size + speed tuning for the shipped binary. LTO + a single codegen unit let
# the optimizer inline across crates; `opt-level = "s"` favors small code
# without gutting the serde_json hot paths; `panic = "abort"` drops unwinding
# tables and `strip` removes symbols. Trade-off: slower release compiles.
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
